# rattomail

./: .gitignore  CHANGELOG.md  Cargo.toml  HACKING.md  LICENSE  Makefile  README.md  TODO.md  build-deb.pl  build.rs  docker-test.pl  print-deb-name.pl
.github/workflows/: build.yml
debian/: control.in
doc/: rattomail.8.md
docker-tests/data/: attomail.conf
docker-tests/image/: Dockerfile  Makefile  mta-dummy-control
examples/: attomail.conf
src/: bogus_main.rs  lib.rs  main.rs
tests/: test_config_file.rs
